fix some property value (task name, download dir, torrent hash, tracker server and file name) make page too wide in task detail page

--- a/src/styles/controls/task-table.css
+++ b/src/styles/controls/task-table.css
@@ -45,18 +45,11 @@
 .task-table .task-name {
     font-size: 14px;
     display: block;
-    word-break: keep-all;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
 }
 
 .task-table .peer-name-wrapper {
     display: inline-block;
     width: 100%;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
 }
 
 .task-table .task-files, .task-table .task-size {
